# discord-rpbot

./: .babelrc  .editorconfig  .eslintrc.json  .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  gulpfile.js  package.json  settings.example.json  settings.example.yml
crates/bot/: Cargo.toml
crates/bot/src/: main.rs
crates/bot/src/bot/: mod.rs
crates/bot/src/bot/commands/: dice.rs  mod.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
docker/: Dockerfile
migrations/: 001-initial-schema.sql
src/: bot.js  commands.js  config.js  logger.js  main.js  rpbot.js  sharder.js  update-check.js  version.js
src/characters/: character.js  database.js  disambiguation.js
src/commands/: about.js  add-character.js  add-mod-role.js  delete-character.js  delete-mod-role.js  dice-roll.js  dispatcher.js  help.js  index.js  list-characters.js  list-mod-roles.js  list-roles.js  max-roll.js  min-roll.js  test.js  view-character.js
src/commands/channels/: allow.js  clear.js  disallow.js  list.js
src/commands/characters/: add.js  addtag.js  clear.js  delete.js  deltag.js  list.js  listauthor.js  listtags.js  view.js
src/commands/dice/: add.js  clear.js  delete.js  list.js  max.js  min.js  roll.js  view.js
src/database/: channel.js  character.js  characters.js  index.js  local-storage.js  mod-role.js  mod-roles.js  roll.js  setting.js  settings.js  usable-channel.js
src/util/: analytics.js  command-pattern.js  command-usage.js  disambiguation.js  logger.js  nbsp.js  pagination.js  permissions.js  search.js  transformers.js  update-check.js
(+11 files in other folders)
