[package]
name = "discord-rpbot"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.3", features = ["env", "derive"] }
dotenv = "0.15.0"
poise = "0.6.1"
secrecy = "0.8.0"
serenity = "0.12.1"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-forest = { version = "0.1.6", features = ["full"] }
tyche = "0.2.0"

rpbot-db.workspace = true
